# typist

./: Makefile  Makefile.in  Makefile.inc.in  README.md  configure  configure.ac  typist
keymaps/: Makefile  colemak.json  de.json  dvorak_single_lh.json  dvorak_single_rh.json  dvorak_uk.json  dvorak_us.json  es.json  fr.json  generate.py  jcuken.json  uk.json  us.json  workman.json
lessons/: LessonSeriesC.json  LessonSeriesD.json  LessonSeriesM.json  LessonSeriesN.json  LessonSeriesQ.json  LessonSeriesR.json  LessonSeriesS.json  LessonSeriesT.json  LessonSeriesU.json  LessonSeriesV.json  Makefile  default.json  proptojsonv2.py  relaxed.json
lessons_v1/: Makefile  default.json  demo.json  json_demo.json  series_c.json  series_d.json  series_m.json  series_n.json  series_q.json  series_r.json  series_s.json  series_t.json  series_u.json  series_v.json  typtojsonv1.py
src/: Makefile  _gettext.h  buffer.c  buffer.h  convert.c  convert.h  json.c  json.h  keymap.c  keymap.h  map.c  map.h  screen.c  screen.h  script.c  script.h  stamp  stamp.c  typist.c  uncurse.c  utf8.c  utf8.h  utils.c  utils.h  v1conv.c  v2conv.c  vector.c  vector.h
